<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pythonanywhere.mkmtutorials.game.Controller.LeaugeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/desiredleaguebg"
        android:contentDescription="@string/leaugeimage" />
    <ImageView
        android:id="@+id/logoname"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginTop="24dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/swooshlogo"
        android:contentDescription="@string/swooshlogo" />




    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/desired_leauge"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoname" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <ToggleButton
            android:id="@+id/mensButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toggale_button"
            android:fontFamily="@font/montserrat"
            android:onClick="MensClicked"
            android:text="@string/mens"
            android:textColor="@android:color/white"
            android:textOff="@string/mens"
            android:textOn="@string/mens"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="259dp" />

        <ToggleButton
            android:id="@+id/womensButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/toggale_button"
            android:fontFamily="@font/montserrat"
            android:onClick="WomensClicked"
            android:text="@string/womens"
            android:textColor="@android:color/white"
            android:textOff="@string/womens"
            android:textOn="@string/womens"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="259dp"
            tools:onClick="WomensClicked"
            tools:text="WOMENS" />

        <ToggleButton
            android:id="@+id/coedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toggale_button"
            android:fontFamily="@font/montserrat"
            android:onClick="CoEdClicked"
            android:text="@string/co_ed"
            android:textColor="@android:color/white"
            android:textOff="@string/co_ed"
            android:textOn="@string/co_ed"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="99dp"
            tools:layout_editor_absoluteY="259dp" />

    </LinearLayout>

    <Button
        android:id="@+id/NextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/toggale_button"
        android:onClick="NextLeauge"
        android:text="@string/next"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:onClick="NextLeauge" />


</android.support.constraint.ConstraintLayout>
